--- a/src/components/AdditionalResources/additional-resources.module.css
+++ b/src/components/AdditionalResources/additional-resources.module.css
@@ -111,6 +111,12 @@
   }
 }
 
+@media (max-width: 1300px) {
+  .resourceGrid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
 @media (max-width: 768px) {
   .resourceGrid {
     grid-template-columns: repeat(2, 1fr);
