--- a/src/pages/sampleApps.module.css
+++ b/src/pages/sampleApps.module.css
@@ -180,8 +180,9 @@ html[data-theme="dark"] .appTitleText {
   .sectionTitle {
     font-size: 20px;
   }
+  
   .sectionContainer {
-    margin-bottom: 2rem; /* mb-12 */
+    margin-bottom: 40px!important; /* mb-12 */
     padding-left: 0; /* px-4 */
     padding-right: 0; /* px-4 */
   }
@@ -198,4 +199,9 @@ html[data-theme="dark"] .appTitleText {
   .sectionContainer {
     margin-bottom: 40px; /* mb-12 */
   }
+  .appsGridContainer {
+    margin-bottom: 40px; /* mb-10 */
+ 
+  }
+  
 }
