--- a/src/pages/apiCard.module.css
+++ b/src/pages/apiCard.module.css
@@ -102,7 +102,7 @@ html[data-theme="dark"] .apiCard:first-child {
 
 @media (max-width: 996px) {
   .sectionContainer {
-  margin-bottom: 40px;
+  margin-bottom: 40px!important;
 }
 .apiCardTitle {
   font-size: 18px!important;
