--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -108,7 +108,7 @@ html[data-theme='dark'] .breadcrumbLink {
 
 @media(max-width: 996px){
 
-  
+
 .heroTitle {
   font-size: 24px;
   font-family: var(--font-family-inter);
@@ -117,6 +117,6 @@ html[data-theme='dark'] .breadcrumbLink {
   .heroDescription {
     font-size: 14px;
     max-width: 100vw;/* max-w-3xl */
-    margin-bottom: 2rem;
+    margin-bottom: 40px;
   }
 }
