--- a/src/components/CustomSidebar.module.css
+++ b/src/components/CustomSidebar.module.css
@@ -337,7 +337,6 @@
   width: 12px;
   height: 12px;
   background-color: var(--icon-secondary);
-  mask-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"><polyline points="6 9 12 15 18 9"></polyline></svg>');
   mask-repeat: no-repeat;
   mask-position: center;
   mask-size: contain;
@@ -359,4 +358,21 @@
 :global(.menu__list .menu__list) {
   position: relative;
   padding-left: 16px;
+}
+
+@media (max-width: 996px) {
+  .sidebarHeaderRow{
+    width: 100%;
+    height: 0px; /* Maintain consistent height */
+  }
+
+:global(.menu__list) {
+  max-width: 100%!important;
+}
+:global(.menu__link) {
+  background-color: var(--background-03) !important;
+  color: var(--text-primary) !important;
+  border-left: 1px solid var(--primary);
+  border-radius: 4px;
+}
 }
