--- a/src/theme/Footer/styles.module.css
+++ b/src/theme/Footer/styles.module.css
@@ -11,10 +11,10 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  max-width: 1440px;
+  /* max-width: 1440px; */
   width: 100%;
   margin: 0 auto;
-  padding: 0 2rem;
+  padding: 0 12rem;
   font-size: 14px;
 }
 
