--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -313,7 +313,9 @@ html[data-theme="dark"] .item-container-desc {
   transition: background-color 0.2s, border-color 0.2s;
   text-decoration: none;
   white-space: nowrap; /* Prevent wrapping */
+  cursor: pointer;
 }
+
 .dashboard-button:hover {
   background-color: var(--ifm-color-emphasis-100);
   border-color: var(--ifm-color-emphasis-400);
@@ -335,8 +337,16 @@ html[data-theme="dark"] .item-container-desc {
   transition: background-color 0.2s, border-color 0.2s;
   text-decoration: none;
   white-space: nowrap; 
+  cursor: pointer;
+}
+.contact-button:hover {
+  opacity: 0.7;
 }
 
+.contact-button:hover .button-text {
+  transform: translateY(-3px); /* Move text 3 pixels up on button hover */
+  /* To move it down, use a positive value: transform: translateY(3px); */
+}
 /* --- Theme Toggle Container (The Box) --- */
 .theme-toggle {
   position: relative; /* For positioning the circle and icons */
