--- a/src/theme/DocSidebar/Desktop/Content/styles.module.css
+++ b/src/theme/DocSidebar/Desktop/Content/styles.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: calc(80vh - var(--ifm-navbar-height));
+  height: calc(88dvh - var(--ifm-navbar-height));
   background-color: var(--background-01);
 }
 .scrollableMenuArea {
